--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.39MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-397.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.51MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.97MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-586.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-889.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.10MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-12.70MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
   - {name: 🇨🇦 加拿大-687.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-397.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
