--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-5.97MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-834.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-368.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-586.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-889.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.10MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-12.70MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
-  - {name: 🇨🇦 加拿大-687.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-872.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-241.7KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-298.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-426.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-670.5KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-265.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-586.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-687.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-872.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-323.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-298.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-426.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-670.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
